--- a/TripGuide/Scenes/Settings/CoreRestaurants/CoreRestCollectionView/CoreRestCollectionViewCell.xib
+++ b/TripGuide/Scenes/Settings/CoreRestaurants/CoreRestCollectionView/CoreRestCollectionViewCell.xib
@@ -18,48 +18,37 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CoreRestCollectionViewCell" id="gTV-IL-0wX" customClass="CoreRestCollectionViewCell" customModule="TripGuide" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="187" height="238"/>
+            <rect key="frame" x="0.0" y="0.0" width="166" height="238"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="187" height="238"/>
+                <rect key="frame" x="0.0" y="0.0" width="166" height="238"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DgQ-mZ-iNY">
-                        <rect key="frame" x="0.0" y="0.0" width="187" height="120"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DgQ-mZ-iNY">
+                        <rect key="frame" x="0.0" y="0.0" width="166" height="142.33333333333334"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="120" id="BEb-wU-2dT"/>
-                            <constraint firstAttribute="width" constant="187" id="hIe-WP-iAh"/>
+                            <constraint firstAttribute="height" constant="142.33000000000001" id="P5Z-iK-944"/>
+                            <constraint firstAttribute="width" constant="166" id="y21-TW-2XL"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="1CH-xI-m0r">
                         <rect key="frame" x="12.000000000000018" y="160" width="44.333333333333336" height="11"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Location" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUL-wL-5QQ">
-                        <rect key="frame" x="10" y="181" width="167" height="36.333333333333343"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="36.329999999999998" id="OiR-wN-sqV"/>
-                            <constraint firstAttribute="width" constant="167" id="gtw-hb-sQ6"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Location" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUL-wL-5QQ">
+                        <rect key="frame" x="10" y="211" width="146" height="17"/>
                         <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbd-xs-0Je">
-                        <rect key="frame" x="10" y="135" width="167" height="25"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="167" id="3D6-b1-e26"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="249" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbd-xs-0Je">
+                        <rect key="frame" x="10" y="157.33333333333334" width="146" height="32.666666666666657"/>
                         <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="22"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address : " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggO-mw-nXi">
-                        <rect key="frame" x="15" y="165" width="157" height="11"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="157" id="N6q-R8-yIC"/>
-                            <constraint firstAttribute="height" constant="11" id="vPY-nS-pYa"/>
-                        </constraints>
+                        <rect key="frame" x="15" y="195" width="141" height="11"/>
                         <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="11"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -68,19 +57,19 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="eUL-wL-5QQ" secondAttribute="trailing" constant="10" id="0O2-J6-W59"/>
                 <constraint firstItem="eUL-wL-5QQ" firstAttribute="top" secondItem="ggO-mw-nXi" secondAttribute="bottom" constant="5" id="0hI-Vq-YJC"/>
                 <constraint firstItem="Jbd-xs-0Je" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="2YL-CT-LSS"/>
-                <constraint firstAttribute="trailing" secondItem="Jbd-xs-0Je" secondAttribute="trailing" constant="10" id="4Ks-69-zpr"/>
-                <constraint firstAttribute="bottom" secondItem="eUL-wL-5QQ" secondAttribute="bottom" constant="20.670000000000002" id="FrM-ft-G1H"/>
-                <constraint firstItem="Jbd-xs-0Je" firstAttribute="top" secondItem="DgQ-mZ-iNY" secondAttribute="bottom" constant="15" id="JWa-ta-hoC"/>
-                <constraint firstAttribute="trailing" secondItem="DgQ-mZ-iNY" secondAttribute="trailing" id="KxP-uL-c5v"/>
-                <constraint firstAttribute="trailing" secondItem="ggO-mw-nXi" secondAttribute="trailing" constant="15" id="LbN-WI-C7v"/>
+                <constraint firstAttribute="trailing" secondItem="Jbd-xs-0Je" secondAttribute="trailing" constant="10" id="62q-UQ-nrF"/>
+                <constraint firstAttribute="bottom" secondItem="eUL-wL-5QQ" secondAttribute="bottom" constant="10" id="FrM-ft-G1H"/>
+                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Uct-yR-mFx"/>
                 <constraint firstItem="ggO-mw-nXi" firstAttribute="top" secondItem="Jbd-xs-0Je" secondAttribute="bottom" constant="5" id="WNW-TO-JmR"/>
+                <constraint firstAttribute="trailing" secondItem="ggO-mw-nXi" secondAttribute="trailing" constant="10" id="X3J-OT-GI7"/>
                 <constraint firstItem="ggO-mw-nXi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="Ztu-m8-fFc"/>
-                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="olv-dE-jdT"/>
+                <constraint firstItem="Jbd-xs-0Je" firstAttribute="top" secondItem="DgQ-mZ-iNY" secondAttribute="bottom" constant="15" id="biT-rb-7Pj"/>
+                <constraint firstAttribute="trailing" secondItem="eUL-wL-5QQ" secondAttribute="trailing" constant="10" id="eF2-uh-usH"/>
                 <constraint firstItem="eUL-wL-5QQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="qoo-2s-7iD"/>
-                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="wT0-0X-bmt"/>
+                <constraint firstItem="DgQ-mZ-iNY" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="sTj-Pt-hn5"/>
+                <constraint firstAttribute="trailing" secondItem="DgQ-mZ-iNY" secondAttribute="trailing" id="z0L-1C-tcB"/>
             </constraints>
             <size key="customSize" width="187" height="238"/>
             <connections>
