--- a/TripGuide/Scenes/Settings/MyBlog/BlogCollectionView/BlogCollectionViewCell.xib
+++ b/TripGuide/Scenes/Settings/MyBlog/BlogCollectionView/BlogCollectionViewCell.xib
@@ -6,6 +6,14 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Gilroy-Bold.ttf">
+            <string>Gilroy-Bold</string>
+        </array>
+        <array key="Gilroy-Regular.ttf">
+            <string>Gilroy-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -17,8 +25,9 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Header" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qA7-ya-Pte">
-                        <rect key="frame" x="10" y="77" width="81.666666666666671" height="53.666666666666657"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
+                        <rect key="frame" x="10" y="77" width="86" height="91"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="25"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kyu-pJ-Dcx">
@@ -29,12 +38,18 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dX5-0L-jbZ">
-                        <rect key="frame" x="10" y="137.33333333333334" width="368" height="57.666666666666657"/>
+                        <rect key="frame" x="10" y="178" width="368" height="17"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="368" id="hTp-WE-pRK"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Zapfino" family="Zapfino" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vl2-cn-hb1">
+                        <rect key="frame" x="290" y="10" width="78" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -42,16 +57,19 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstItem="qA7-ya-Pte" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="3xx-ww-WuU"/>
-                <constraint firstItem="dX5-0L-jbZ" firstAttribute="top" secondItem="qA7-ya-Pte" secondAttribute="bottom" constant="6.6666666666666714" id="66P-Yd-k3h"/>
                 <constraint firstAttribute="bottom" secondItem="dX5-0L-jbZ" secondAttribute="bottom" constant="2" id="Cci-r9-BhY"/>
                 <constraint firstItem="dX5-0L-jbZ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="GkE-XW-5rw"/>
+                <constraint firstItem="vl2-cn-hb1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Sbz-ti-wF6"/>
                 <constraint firstItem="kyu-pJ-Dcx" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="W0A-Kk-1Ja"/>
                 <constraint firstItem="qA7-ya-Pte" firstAttribute="top" secondItem="kyu-pJ-Dcx" secondAttribute="bottom" constant="17" id="bS0-Dh-Gbj"/>
                 <constraint firstAttribute="trailing" secondItem="dX5-0L-jbZ" secondAttribute="trailing" constant="10" id="e3n-yd-OoR"/>
+                <constraint firstItem="dX5-0L-jbZ" firstAttribute="top" secondItem="qA7-ya-Pte" secondAttribute="bottom" constant="10" id="kQ9-2g-uhp"/>
                 <constraint firstItem="kyu-pJ-Dcx" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="kTw-ZD-IGA"/>
+                <constraint firstAttribute="trailing" secondItem="vl2-cn-hb1" secondAttribute="trailing" constant="20" id="lFM-Qe-bjJ"/>
             </constraints>
             <size key="customSize" width="388" height="197"/>
             <connections>
+                <outlet property="dateLbl" destination="vl2-cn-hb1" id="h5m-8z-FuE"/>
                 <outlet property="headerLbl" destination="qA7-ya-Pte" id="KCa-jT-bdg"/>
                 <outlet property="textLbl" destination="dX5-0L-jbZ" id="By8-wD-NYG"/>
                 <outlet property="touristImage" destination="kyu-pJ-Dcx" id="cao-uD-Td4"/>
