--- a/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
+++ b/TripGuide/Scenes/Settings/PlannedToursTableView/PlannedTourTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -53,19 +54,18 @@
                         <color key="textColor" systemColor="systemGreenColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="❤️" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZnB-bH-lJK">
-                        <rect key="frame" x="191" y="20" width="36" height="39"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="39" id="anG-aK-bB1"/>
-                            <constraint firstAttribute="width" constant="36" id="dGu-SQ-JQj"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gvC-Cx-daz">
+                        <rect key="frame" x="176.33333333333334" y="20.000000000000004" width="50.666666666666657" height="34.333333333333343"/>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain">
+                            <imageReference key="image" image="heart.fill" catalog="system" renderingMode="template"/>
+                            <color key="baseForegroundColor" systemColor="systemGray4Color"/>
+                        </buttonConfiguration>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="gvC-Cx-daz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="0Se-Ac-Oni"/>
                     <constraint firstAttribute="trailingMargin" secondItem="rGR-JG-e5J" secondAttribute="trailing" constant="10" id="0tR-fz-rI9"/>
                     <constraint firstAttribute="trailing" secondItem="J09-5Y-UWG" secondAttribute="trailing" constant="10" id="2le-HO-eRG"/>
                     <constraint firstItem="rGR-JG-e5J" firstAttribute="top" secondItem="UcS-Tb-9JF" secondAttribute="bottom" constant="8" symbolic="YES" id="3iV-Y7-c4v"/>
@@ -74,8 +74,7 @@
                     <constraint firstItem="KrA-Ga-IED" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="8dV-Hl-o1g"/>
                     <constraint firstItem="rGR-JG-e5J" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="8n4-9c-jnp"/>
                     <constraint firstItem="UcS-Tb-9JF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="GDB-BX-Bph"/>
-                    <constraint firstItem="ZnB-bH-lJK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="HtG-fK-Obx"/>
-                    <constraint firstAttribute="trailing" secondItem="ZnB-bH-lJK" secondAttribute="trailing" constant="10" id="R8K-4I-Axg"/>
+                    <constraint firstAttribute="trailing" secondItem="gvC-Cx-daz" secondAttribute="trailing" constant="10" id="i59-jL-yx6"/>
                     <constraint firstAttribute="bottomMargin" secondItem="rGR-JG-e5J" secondAttribute="bottom" constant="13" id="itg-cd-SsR"/>
                     <constraint firstItem="KrA-Ga-IED" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="jIL-22-bzG"/>
                     <constraint firstItem="J09-5Y-UWG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="oky-i3-47R"/>
@@ -84,6 +83,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="heartButton" destination="gvC-Cx-daz" id="OUF-2g-4lG"/>
                 <outlet property="phonNum" destination="UcS-Tb-9JF" id="F1R-xh-b7d"/>
                 <outlet property="priceLbl" destination="rGR-JG-e5J" id="qti-IM-gmJ"/>
                 <outlet property="tourImage" destination="KrA-Ga-IED" id="w4M-he-vgz"/>
@@ -93,6 +93,10 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <systemColor name="systemGray4Color">
+            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
